              within a triangulation.
        Class NLayeredSolidTorus:
            - New routine formsLayeredSolidTorusTop() for finding an LST
              from the top end instead of the bottom.
        Class NLayeredTorusBundle, NTxICore, NTxIDiagonalCore, NTxIParallelCore:
            - Added for recognition of layered surface bundles.
        Class NMatrix2:
            - New specialised class for working with 2x2 integer matrices.
        Class NPerm:
            - The assignment operator now returns a reference instead of void.
        Class NPluggedIBundle, NPluggedIBundleCore, NTorusPlug:
            - Added for recognition of small closed non-orientable
              3-manifolds.
        Class NSFS, NSFSpace, NExceptionalFibre, NSFSFibre:
            - Complete overhaul of the Seifert fibred space classes.
              Now more general, supporting both orientable and
              non-orientable 3-manifolds as well as base orbifolds with
              reflector boundary components.
        Class NTorusBundle:
            - New class of 3-manifolds.
        Class NTriangulation:
            - Combined isomorphism and subcomplex testing routines into
              a single all-in-one routine to avoid excessive code reuse.
            - New routine findAllSubcomplexesIn() for subcomplex testing
              in which all matches (not just the first) should be returned.
            - Routines getTetrahedronIndex(), getComponentIndex(),
              getBoundaryComponentIndex(), getFaceIndex(), getEdgeIndex()
              and getVertexIndex() all returned signed instead of unsigned
              longs, so that -1 can be returned if the object could not
              be found.
    PYTHON:
        Class NSnapPeaTriangulation:
            - Offers the additional zero-argument routine volumeWithPrecision()
              as a way of returning the precision of the volume calculation.
    UTILITIES:
        tricensus-mpi:
            - Significant overhaul.