@@ -74,7 +74,11 @@ class NManifold : public ShareableObject {
         std::string getName() const;
         /**
          * Returns the common name of this 3-manifold in TeX format.
-         * Leading and trailing dollar signs will be included.
+         * No leading or trailing dollar signs will be included.
+         *
+         * \warning The behaviour of this routine has changed as of
+         * Regina 4.3; in earlier versions, leading and trailing dollar
+         * signs were provided.
          *
          * @return the common name of this 3-manifold in TeX format.
          */
@@ -138,8 +142,12 @@ class NManifold : public ShareableObject {
         virtual std::ostream& writeName(std::ostream& out) const = 0;
         /**
          * Writes the common name of this 3-manifold in TeX format to
-         * the given output stream.  Leading and trailing dollar signs
+         * the given output stream.  No leading or trailing dollar signs
          * will be included.
+         *
+         * \warning The behaviour of this routine has changed as of
+         * Regina 4.3; in earlier versions, leading and trailing dollar
+         * signs were provided.
          *
          * \ifacespython The parameter \a out does not exist;
          * standard output will be used.
